--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
       <h1>Project: Tic Tac Toe</h1>
     </header>
     <main>
-      lorem ipsum
+      <div class="game-container">
+        <div class="cell">X</div>
+        <div class="cell">O</div>
+        <div class="cell">X</div>
+        <div class="cell">O</div>
+        <div class="cell">X</div>
+        <div class="cell">O</div>
+        <div class="cell">X</div>
+        <div class="cell">O</div>
+        <div class="cell">X</div>
+      </div>
     </main>
     <footer class="flex-container">
       <span
