Add button to clear board

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
     </header>
     <main>
       <div class="game-container">
-        <div class="cell">X</div>
-        <div class="cell">O</div>
-        <div class="cell">X</div>
-        <div class="cell">O</div>
-        <div class="cell">X</div>
-        <div class="cell">O</div>
-        <div class="cell">X</div>
-        <div class="cell">O</div>
-        <div class="cell">X</div>
+        <div data-index="0" class="cell"></div>
+        <div data-index="1" class="cell"></div>
+        <div data-index="2" class="cell"></div>
+        <div data-index="3" class="cell"></div>
+        <div data-index="4" class="cell"></div>
+        <div data-index="5" class="cell"></div>
+        <div data-index="6" class="cell"></div>
+        <div data-index="7" class="cell"></div>
+        <div data-index="8" class="cell"></div>
       </div>
+      <button id="reset">Clear board</button>
     </main>
     <footer class="flex-container">
       <span
