Add class .hidden to reset button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="flex-container">
       <h1>Project: Tic Tac Toe</h1>
-      <button id="reset">Clear board</button>
+      <button id="reset" class="hidden">Clear board</button>
     </header>
     <main>
       <div class="game-container">
