Add game over card

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <button id="reset" class="hidden">Clear board</button>
     </header>
     <main>
+      <div id="game-over-card" class="hidden"><h1>GAME OVER</h1></div>
       <div class="game-container">
         <div data-index="0" class="cell"></div>
         <div data-index="1" class="cell"></div>
