--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="flex-container">
       <h1>Project: Tic Tac Toe</h1>
-      <button id="reset" class="hidden">Clear board</button>
+      <button id="reset" class="hidden">New round</button>
     </header>
     <main>
       <div id="game-over-card" class="hidden"><h1>GAME OVER</h1></div>
