--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       <button id="reset" class="hidden">New round</button>
     </header>
     <main>
-      <div id="game-over-card" class="hidden"><h1>GAME OVER</h1></div>
+      <div id="game-over-card" class="hidden">
+        <h2>GAME OVER</h2>
+        <h1 id="result-display"></h1>
+      </div>
       <div class="game-container">
         <div data-index="0" class="cell"></div>
         <div data-index="1" class="cell"></div>
