--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <body>
     <header class="flex-container">
       <h1>Project: Tic Tac Toe</h1>
+      <form id="player-names-input" action="#">
+        <fieldset>
+          <label for="player1-name">Player1 (X) name:</label>
+          <input type="text" name="player-one-name" id="player1-name" placeholder="Player1">
+        </fieldset>
+        <fieldset>
+          <label for="player2-name">Player2 (O) name: </label>
+          <input type="text" name="player-two-name" id="player2-name" placeholder="Player2">
+        </fieldset>
+      </form>
       <button id="reset" class="hidden">New round</button>
     </header>
     <main>
