Move players names input to 'game over card'

--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
   <body>
     <header class="flex-container">
       <h1>Project: Tic Tac Toe</h1>
-      <form id="player-names-input" action="#">
-        <fieldset>
-          <label for="player1-name">Player1 (X) name:</label>
-          <input type="text" name="player-one-name" id="player1-name" placeholder="Player1">
-        </fieldset>
-        <fieldset>
-          <label for="player2-name">Player2 (O) name: </label>
-          <input type="text" name="player-two-name" id="player2-name" placeholder="Player2">
-        </fieldset>
-      </form>
-      <button id="reset" class="hidden">New round</button>
+      <button id="reset">New round</button>
     </header>
     <main>
-      <div id="game-over-card" class="hidden">
-        <h2>GAME OVER</h2>
+      <div id="game-over-card">
         <h1 id="result-display"></h1>
+        <form id="player-names-input" action="#">
+          <fieldset>
+            <label for="player1-name">Player1 (X) name:</label>
+            <input type="text" name="player-one-name" id="player1-name" placeholder="Player1">
+          </fieldset>
+          <fieldset>
+            <label for="player2-name">Player2 (O) name: </label>
+            <input type="text" name="player-two-name" id="player2-name" placeholder="Player2">
+          </fieldset>
+        </form>
       </div>
       <div class="game-container">
         <div data-index="0" class="cell"></div>
