Add maxlength to player name inputs

--- a/index.html
+++ b/index.html
@@ -18,11 +18,21 @@
         <form id="player-names-input" action="#">
           <fieldset>
             <label for="player1-name">Player1 (X) name:</label>
-            <input type="text" name="player-one-name" id="player1-name" placeholder="Player1">
+            <input 
+              type="text"
+              name="player-one-name"
+              id="player1-name"
+              placeholder="Player1"
+              maxlength="8">
           </fieldset>
           <fieldset>
             <label for="player2-name">Player2 (O) name: </label>
-            <input type="text" name="player-two-name" id="player2-name" placeholder="Player2">
+            <input
+              type="text"
+              name="player-two-name"
+              id="player2-name"
+              placeholder="Player2"
+              maxlength="8">
           </fieldset>
         </form>
       </div>
