--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           </fieldset>
         </form>
       </div>
-      <div class="game-container">
+      <div id="active-player-display"></div>
+      <div id="board-container">
         <div data-index="0" class="cell"></div>
         <div data-index="1" class="cell"></div>
         <div data-index="2" class="cell"></div>
