Update html and css to allow to play in plain html

--- a/index.html
+++ b/index.html
@@ -38,15 +38,21 @@
       </div>
       <div id="active-player-display"></div>
       <div id="board-container">
-        <div data-index="0" class="cell"></div>
-        <div data-index="1" class="cell"></div>
-        <div data-index="2" class="cell"></div>
-        <div data-index="3" class="cell"></div>
-        <div data-index="4" class="cell"></div>
-        <div data-index="5" class="cell"></div>
-        <div data-index="6" class="cell"></div>
-        <div data-index="7" class="cell"></div>
-        <div data-index="8" class="cell"></div>
+        <div>
+          <button data-index="0" class="cell"></button>
+          <button data-index="1" class="cell"></button>
+          <button data-index="2" class="cell"></button>
+        </div>
+        <div>
+          <button data-index="3" class="cell"></button>
+          <button data-index="4" class="cell"></button>
+          <button data-index="5" class="cell"></button>
+        </div>
+        <div>
+          <button data-index="6" class="cell"></button>
+          <button data-index="7" class="cell"></button>
+          <button data-index="8" class="cell"></button>
+        </div>
       </div>
     </main>
     <footer class="flex-container">
